# VRM

./: .gitignore  analysis.py  dataset.py  gemini.md  layers.py  loss.py  main.py  model.py  pyproject.toml  test_analysis.py  test_balancing.py  test_dataset.py  test_model.py  train.py  train_imagefolder.py
dummy_data/EmoLabel/: list_patition_label.txt
